<resources>
    <string name="app_name">SinghMehandi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_get_otp">Get OTP</string>
    <string name="title_verify_otp">Verify OTP</string>
    <string name="wrong_user_id">Please enter correct userId</string>
    <string name="okBtm">Ok</string>
    <string name="app_change_mobile">Change User Id</string>
    <string name="app_resend_otp">Resend OTP</string>
    <string name="title_verifyotp">Verify OTP</string>
    <string name="invalid_user">User not found in our database, please try with differebt user.</string>
    <string name="invalid_otp">Invalid OTP, please enter correct OTP.</string>
    <string name="otp_filter_message">TM-SinghM</string>
    <string name="title_shop_list">Shop List</string>
    <string name="area_code">Area Code</string>
    <string name="title_retailer">Retailer</string>
    <string name="title_wholesale">Wholesale</string>
    <string name="title_mobileoutlet">MobileOutlet</string>
    <string name="area_name">Area Name</string>
    <string name="route_code">Route Code</string>
    <string name="route_name">Route Name</string>
    <string name="shop_name">Shop Name</string>
    <string name="hint_shop_name">Enter shop name</string>
    <string name="title_place">Place</string>
    <string name="hint_place">Place</string>
    <string name="title_mobile">Mobile</string>
    <string name="hint_mobile">Enter 10 digit mobile number</string>
    <string name="title_gst">GST</string>
    <string name="hint_gst">Enter GST number</string>
    <string name="shop_type">Shop Type</string>
    <string name="title_address">Address</string>
    <string name="hint_address">Enter shop address</string>
    <string name="title_pan_tan">PAN-TIN</string>
    <string name="hint_pan_tin">Enter PAN TAN number</string>
    <string name="title_note">Note</string>
    <string name="hint_note">Enter your Note</string>
    <string name="title_order">Add Order</string>
    <string name="title_submit">Submit</string>
    <string name="title_empty_shop_value">Please enter shop name</string>
    <string name="title_empty_place_value">Please enter shop location</string>
    <string name="title_empty_mobile_value">Please enter mobile number</string>
    <string name="title_invalid_mobile_value">Please enter 10 digit mobile number</string>
    <string name="title_empty_gst_value">Please enter your GST number</string>
    <string name="title_empty_shop_address_value">Please enter shop complete address</string>
    <string name="title_empty_pintin_value">Please enter your Pin Tan number</string>
    <string name="title_shop">Shop</string>
    <string name="order">order</string>
    <string name="order_caps">Order</string>
    <string name="title_profile">My Profile</string>
    <string name="title_order_list">Order List</string>
    <string name="title_add_shop">Add Shop</string>
    <string name="title_area_details">Area Details</string>
    <string name="title_add_order">Add Order</string>
    <string name="retailer_name">Retailer Name</string>
    <string name="retailer_code">Retailer Code</string>
    <string name="distributor">Distributor</string>
    <string name="title_shop_details">Shop Details</string>
    <string name="title_retailer_details">Retailer Details</string>
    <string name="title_edit">Edit</string>
    <string name="title_delete">Delete</string>
    <string name="title_state">State</string>
    <string name="title_region">Region</string>
    <string name="title_type_order">Order</string>
    <string name="title_type_visit">Visit</string>
    <string name="title_type_visit_small">visit</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_narration">Narration</string>
    <string name="description">Description</string>
    <string name="title_select_type">Select Type</string>
    <string name="title_salesman">Sales Man</string>
    <string name="route">Route</string>
    <string name="title_cancel">Cancel</string>
    <string name="empty_rootname">Please enter root name</string>
    <string name="empty_shopname">Please enter shop name</string>
    <string name="empty_sales_man_name">Please enter sales man name</string>
    <string name="empty_quantity">Please enter quantity</string>
    <string name="empty_narration">Please enter order narration</string>
    <string name="title_logout">Logout</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_toDate">select to date</string>
    <string name="title_select_date">select data range</string>
    <string name="but_done">Done</string>
    <string name="title_tab_start_date">Start Date</string>
    <string name="ttile_tab_end_date">End Date</string>
    <string name="title_update_Order">Update Order</string>
    <string name="search_hint">type order name</string>
    <string name="selectroutename">Select route name</string>
    <string name="selectroutecode">Select route code</string>
    <string name="selectareaname">Select area name</string>
    <string name="selectareacode">Select area code</string>
    <string name="select_description">Select Description</string>
    <string name="title_order_details">Order Details</string>
    <string name="distributor_name">Distributor Name</string>
    <string name="title_sales_man_name">SalesMan</string>
    <string name="title_superstock">Super Stock</string>
    <string name="title_superstockist">Superstockist</string>
    <string name="title_trum">Trum</string>
    <string name="title_trnum">Tr.Num</string>
    <string name="title_item_details">Item Details</string>
    <string name="title_item">Item</string>
    <string name="title_quantity">Quantity</string>
    <string name="only_alpha_numeric_with_caps_special_char_and_space">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz 1234567890.,-/ </string>
    <string name="only_alpha_numeric_with_caps_and_space">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz 1234567890</string>
    <string name="empty_description">Please seclect description first to proceed.</string>
    <string name="title_remarks">Remarks</string>
    <string name="title_update">Update</string>
</resources>
