<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <EditText
            android:id="@+id/userIdET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="30dp"
            android:hint="Enter user id"
            android:paddingLeft="10dp"
            android:fontFamily="@font/roboto_medium"
            android:background="@drawable/rounded_corner_text"/>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/verifyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/userIdET">

        <EditText
                android:id="@+id/otpET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="30dp"
                android:hint="Enter OTP"
                android:paddingLeft="10dp"
                android:textSize="14sp"
                android:inputType="number"
                android:fontFamily="@font/roboto_medium"
                android:background="@drawable/rounded_corner_text"/>
        <TextView
                android:id="@+id/changeMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/otpET"
                app:layout_constraintTop_toBottomOf="@+id/otpET"
                android:text="@string/app_change_mobile"
                android:padding="10dp"
                android:textSize="16sp"
                android:fontFamily="@font/roboto_medium"/>
        <TextView
                android:id="@+id/resendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="@+id/otpET"
                app:layout_constraintTop_toBottomOf="@+id/otpET"
                android:text="@string/app_resend_otp"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
                android:padding="10dp"/>
    </android.support.constraint.ConstraintLayout>
    <Button
            android:id="@+id/getOtpBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verifyLayout"
            android:text="@string/title_get_otp"
            android:layout_marginTop="20dp"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/round_corner_filled"
            android:fontFamily="@font/roboto_medium"/>



    <com.wang.avi.AVLoadingIndicatorView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/progressAVL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AVLoadingIndicatorView"
            android:visibility="gone"
            app:indicatorName="BallPulseIndicator"
            app:indicatorColor="@color/colorPrimary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
    />

</android.support.constraint.ConstraintLayout>